--- a/leaderboard_CUMUL.html
+++ b/leaderboard_CUMUL.html
@@ -1,5 +1,22 @@
 <html>
-<head><meta charset="utf-8" /></head>
+<head>
+<title>Alan's labeling skills not impressing anyone, small gap to take lead</title>
+<meta name="title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
+<meta name="description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
+<meta property="og:description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
+<meta property="twitter:description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"><meta charset="utf-8" /></head>
 <body>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
