--- a/leaderboard_CUMUL.html
+++ b/leaderboard_CUMUL.html
@@ -2,8 +2,7 @@
 <head>
 <title>Alan's labeling skills not impressing anyone, small gap to take lead</title>
 <link rel="icon" 
-      type="image/png" 
-     href="images/favicon.ico">
+      type="image/png"> 
 <meta name="title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
 <meta name="description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
 
