--- a/leaderboard_CUMUL.html
+++ b/leaderboard_CUMUL.html
@@ -11,14 +11,14 @@
 <meta property="og:url" content="https://happylehman.github.io/">
 <meta property="og:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
 <meta property="og:description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="https://storage.googleapis.com/ct001-tiled/leaderboard_raw.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://happylehman.github.io/">
 <meta property="twitter:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
 <meta property="twitter:description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"><meta charset="utf-8" /></head>
+<meta property="twitter:image" content="https://storage.googleapis.com/ct001-tiled/leaderboard_raw.png"><meta charset="utf-8" /></head>
 <body>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
