Updated description line for unfurl

--- a/leaderboard_CUMUL.html
+++ b/leaderboard_CUMUL.html
@@ -4,7 +4,7 @@
 <link rel="icon" 
       type="image/png"> 
 <meta name="title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
-<meta name="description" content="I made this website to show just how Not far Alan is ahead in the Label Games - Round 1">
+<meta name="description" content="I made this website to show just how Not far Alan is ahead in the Label Games">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
