Made description changes in fb/tw unfurl lines in html

--- a/leaderboard_CUMUL.html
+++ b/leaderboard_CUMUL.html
@@ -4,20 +4,20 @@
 <link rel="icon" 
       type="image/png"> 
 <meta name="title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
-<meta name="description" content="I made this website to show how Not far ahead Alan truly is in the Label Games">
+<meta name="description" content="I made this website to show how Not far ahead Alan actually is in the Label Games">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://beware_of_imposters.alan/">
 <meta property="og:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
-<meta property="og:description" content="I made this website to show just how Not far Alan is ahead in the Label Games">
+<meta property="og:description" content="I made this website to show how Not far ahead Alan actually is in the Label Games">
 <meta property="og:image" content="https://storage.googleapis.com/ct001-tiled/leaderboard_raw.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://beware_of_impostors.alan/">
 <meta property="twitter:title" content="Alan's labeling skills not impressing anyone, small gap to take lead">
-<meta property="twitter:description" content="I made this website to show just how Not far Alan is ahead in the Label Games">
+<meta property="twitter:description" content="I made this website to show how Not far ahead Alan actually is in the Label Games">
 <meta property="twitter:image" content="https://storage.googleapis.com/ct001-tiled/leaderboard_raw.png"><meta charset="utf-8" /></head>
 <body>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
